--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  charts_flutter: ^0.9.0
+
 
 dev_dependencies:
   flutter_test:
