--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   charts_flutter: ^0.9.0
-
+  path:
+  provider:
+  sqflite: ^1.3.0
 
 dev_dependencies:
   flutter_test:
