--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   path:
   provider:
   sqflite: ^1.3.0
+  flutter_local_notifications: ^3.0.1+2
 
 dev_dependencies:
   flutter_test:
