--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   provider:
   sqflite: ^1.3.0
   flutter_local_notifications: ^3.0.1+2
+  firebase_core:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
