--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_local_notifications: ^3.0.1+2
   firebase_core:
   cloud_firestore:
+  google_maps_flutter: ^1.0.6
+
 
 dev_dependencies:
   flutter_test:
