FIX - change date format

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,22 +7,38 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  # Default
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+
+  # Charts
   charts_flutter: ^0.9.0
+
+  # Local Database
   path:
   provider:
   sqflite: ^1.3.0
+
+  # Notification
   flutter_local_notifications: ^3.0.1+2
+
+  # Firestore Cloud
   firebase_core:
   cloud_firestore:
+
+  # Google Map
   google_maps_flutter: ^1.0.6
+
+  # Date Format
+  intl: ^0.16.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Icon and Nanem Edit
   flutter_launcher_icons: "^0.8.0"
   flutter_launcher_name: "^0.0.1"
 
