--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   # Date Format
   intl: ^0.16.1
 
+  # Image Caching
+  cached_network_image: ^2.4.1
+
 
 dev_dependencies:
   flutter_test:
