--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,14 @@ dependencies:
   cloud_firestore:
 
   # Google Map
-  google_maps_flutter: ^1.0.6
-  location: ^3.0.2
-  geolocator: 5.1.1
+  # google_maps_flutter: ^1.0.6
+  # location: ^3.0.2
+  # geolocator: 5.1.1
+  # geocoding: ^1.0.5
+
+  # Map
+  flutter_map: any
+  geolocator: ^6.1.7
   geocoding: ^1.0.5
 
   # Google API Check
@@ -60,4 +65,5 @@ flutter:
   uses-material-design: true
   assets: 
     - images/
+    - assets/
 
