--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,19 +27,10 @@ dependencies:
   firebase_core:
   cloud_firestore:
 
-  # Google Map
-  # google_maps_flutter: ^1.0.6
-  # location: ^3.0.2
-  # geolocator: 5.1.1
-  # geocoding: ^1.0.5
-
   # Map
   flutter_map: any
   geolocator: ^6.1.7
   geocoding: ^1.0.5
-
-  # Google API Check
-  google_api_availability: ^2.0.4
 
   # Date Format
   intl: ^0.16.1
@@ -65,5 +56,6 @@ flutter:
   uses-material-design: true
   assets: 
     - images/
+    - images/tutorials/missing_person/
     - assets/
 
