--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # Date Format
   intl: ^0.16.1
 
+  # Key-Value Storage
+  shared_preferences:
+
 
 dev_dependencies:
   flutter_test:
